<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/arrow_left" />

            <TextView
                android:id="@+id/screenTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Detail"
                android:textSize="18sp"
                android:fontFamily="@font/sora_bold"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/heart" />
        </LinearLayout>


        <ImageView
            android:id="@+id/coffeeImage"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/coffee"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:background="@color/light_gray"
        android:layout_margin="16dp"/>

        <!-- Header Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Title -->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/caffe_mocha"
                android:textSize="24sp"
                android:fontFamily="@font/sora_bold"
                android:textColor="@color/black"
                android:layout_marginBottom="4dp" />

            <!-- Container for 3 images -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:spacing="4dp">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/desc_img_1"
                    android:layout_marginStart="4dp"/>

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/desc_img_2"
                    android:layout_marginStart="4dp"/>

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/desc_img_3"
                    android:layout_marginStart="4dp"/>
            </LinearLayout>

        </LinearLayout>


        <!-- Hot/Ice Indicator -->
        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ice_hot"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/sora_regular"
            android:layout_marginBottom="16dp" />



        <!-- Rating Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/star"
                app:tint="#FBBE21" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.8"
                android:textSize="16sp"
                android:fontFamily="@font/sora_semibold"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(230)"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/sora_semibold"
                android:layout_marginStart="4dp" />



        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_marginBottom="24dp" />

        <!-- Description Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="18sp"
            android:fontFamily="@font/sora_semibold"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/sora_regular"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvReadMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:textSize="14sp"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/sora_semibold"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <!-- Size Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp" />

        <RadioGroup
            android:id="@+id/radioGroupSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="32dp">

            <RadioButton
                android:id="@+id/radioSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="S"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:button="@null"
                android:background="@drawable/radio_button"
                android:gravity="center"
                android:padding="12dp"
                android:layout_marginEnd="8dp"/>

            <RadioButton
                android:id="@+id/radioMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="M"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:button="@null"
                android:background="@drawable/radio_button"
                android:gravity="center"
                android:padding="12dp"
                android:checked="true"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <RadioButton
                android:id="@+id/radioLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="L"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:button="@null"
                android:background="@drawable/radio_button"
                android:gravity="center"
                android:padding="12dp"
                android:layout_marginStart="8dp"/>

        </RadioGroup>


        <!-- Price and Buy Button Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/bottom_section_rounded"
            android:layout_gravity="bottom">

            <!-- Vertical layout for Price label + number -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Price"
                    android:textSize="14sp"
                    android:fontFamily="@font/sora_regular"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora_semibold"
                    android:text="$ 4.53"
                    android:textSize="20sp"
                    android:textColor="@color/primary_color" />
            </LinearLayout>

            <!-- Buy Now button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBuyNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_now"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:fontFamily="@font/sora_semibold"
                android:background="@drawable/rounded_button"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:elevation="4dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>